# products

./: .gitignore  README.md
frontend/: Dockerfile  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  references-migration-guide.md
frontend/.streamlit/: config.toml
frontend/docs/: protocol-layers-guide.md  streaming-chat-guide.md
frontend/documents/: a2a-interface.md  api-interface.md  class-diagram.md  confirm-flow-guide.md  how-to-change.md
frontend/src/: __init__.py  chat_utils.py  main.py
frontend/src/a2a_app/: __init__.py  card.py  client.py  executor.py  server.py
frontend/src/common/: __init__.py
frontend/src/common/defs/: __init__.py  server_contracts.py  types.py
frontend/src/common/exceptions/: __init__.py
frontend/src/common/lib/: __init__.py  bases.py  logging.py
frontend/src/common/settings/: __init__.py  app.py
frontend/src/pages/: a2a_stream.py  api_stream.py  chat.py  home.py  settings.py
frontend/src/services/: __init__.py
frontend/tests/: test_chat_utils.py
frontend/tests/a2a_app/: test_card.py  test_client.py  test_executor.py
frontend/tests/common/di/: test_builders.py
frontend/tests/common/schema/: test__helpers.py  test_node.py
frontend/tests/components/io/: test_prompt.py
frontend/tests/components/llms/: test_factories.py
frontend/tests/pages/: test_a2a_stream.py
